<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".rfid.inventory.InventoryActivity" >

    <LinearLayout
        android:id="@+id/resultLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/fastIdCheckBox"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="8dp"
        android:background="#eef"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="1"
            android:background="#cce"
            android:text="@string/tag_list_title"
            android:textColor="#000" />

        <ListView
            android:id="@+id/resultListView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="2" >

        </ListView>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#cce"
            android:text="@string/barcode_list_title"
            android:textColor="#000" />

        <ListView
            android:id="@+id/barcodeListView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >
        </ListView>

        <TextView
            android:id="@+id/bluetooth_permissions_prompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="0dp"
            android:gravity="center_horizontal"
            android:maxLines="2"
            android:text="@string/bt_permission"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="11sp"
            android:visibility="gone"
            />

    </LinearLayout>

    <Button
        android:id="@+id/scanButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/scan_start_button_text" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/scanButton"
        android:layout_alignBottom="@+id/scanButton"
        android:layout_centerHorizontal="true"
        android:text="@string/clear_button_text" />

    <Button
        android:id="@+id/scanStopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/scanButton"
        android:layout_alignBottom="@+id/scanButton"
        android:layout_alignEnd="@+id/resultLinearLayout"
        android:text="@string/scan_stop_button_text" />

    <SeekBar
        android:id="@+id/powerSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/scanButton"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_toStartOf="@+id/powerTextView" />

    <TextView
        android:id="@+id/powerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/powerSeekBar"
        android:layout_alignEnd="@+id/scanStopButton"
        android:gravity="center"
        android:text="@string/power_level_label_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <CheckBox
        android:id="@+id/uniquesCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/powerSeekBar"
        android:layout_alignStart="@+id/powerSeekBar"
        android:layout_alignTop="@+id/sessionSpinner"
        android:layout_marginBottom="8dp"
        android:text="@string/uniques_only_title"
        android:textColor="#0D47A1" />

    <Spinner
        android:id="@+id/sessionSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/powerSeekBar"
        android:layout_toEndOf="@+id/uniquesCheckBox"
        android:layout_marginBottom="8dp"
        android:layout_toStartOf="@+id/fastIdCheckBox" />

    <CheckBox
        android:id="@+id/fastIdCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/powerSeekBar"
        android:layout_alignEnd="@+id/powerTextView"
        android:layout_alignTop="@+id/sessionSpinner"
        android:layout_marginBottom="8dp"
        android:text="@string/use_fast_id_title"
        android:textColor="#0D47A1" />


    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/fastIdCheckBox"
        android:gravity="center_vertical|center_horizontal"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#A00"
        android:textSize="16sp" />

</RelativeLayout>